# Battleships

./: .gitignore  Cargo.toml  README.md
assets/: style.css
src/: board_circuit.rs  circuit.rs  crypto.rs  gui.rs  lib.rs  logic.rs  main.rs  model.rs  net.rs  ui.rs  utils.rs
src/circuit/: board_declaration_circuit.rs  commons.rs  field_declaration_circuit.rs
src/crypto/: keys.rs  proofs.rs
src/gui/: boards.rs  cli.rs  common.rs  lobby.rs  main_menu.rs
src/logic/: board_creation.rs  game_init.rs  game_loop.rs  main.rs
src/net/: connection.rs  result.rs
src/networking/: connection.rs  message.rs
src/ui/: cli.rs  gui.rs
src/ui/gui/: boards.rs  common.rs  lobby.rs  main_menu.rs
src/utils/: async_receiver.rs  input.rs  interruptible.rs  log.rs  result.rs  ship_helpers.rs  threads.rs
tests/: board_circuit_tests.rs  board_declaration_circuit_tests.rs  field_declaration_circuit_test.rs
