[package]
name = "battleships"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = { version = "0.4.0" }
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "crh"] }
ark-ec = { version = "0.4.2" }
ark-ed-on-bls12-381 = { version = "0.4.0", features = ["r1cs"] }
ark-ff = { version = "0.4.2" }
ark-groth16 = { version = "0.4.0" }
ark-relations = { version = "0.4.0" }
ark-serialize = { version = "0.4.2" }
ark-snark = { version = "0.4.0" }
ark-std = { version = "0.4.0" }
ark-poly = { version = "0.4.2" }
ark-poly-commit = { version = "0.4.0" }
ark-r1cs-std = { version = "0.4.0" }
sha2 = "0.10.8"

async-std = "1.12.0"
async-channel = "2.3.1"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rustyline-async = "0.4.2"
clap = { version = "=4.4.7", features = ["derive"] }
rand = "0.8.5"
